# ground_removal_experiment

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  build.bash  run.bash
config/: default.cfg  sim1.cfg  sim2.cfg  sim3.cfg  sim5.cfg
config/set1/: sim4.cfg  sim6.cfg
config/set2/: sim2.cfg  sim3.cfg  sim4.cfg  sim5.cfg  sim8.cfg
config/set3/: .sim8.cfg.swp  sim1.cfg  sim2.cfg  sim3.cfg  sim4.cfg  sim5.cfg  sim6.cfg  sim7.cfg  sim8.cfg
config/set4/: sim1.cfg  sim2.cfg  sim3.cfg
docs/: pc_classdiagram  point_categorization_design.odt
experiment_data/20-04-2022-600rpm/: run_experiment.bash
pcd_files/: cluster_0.pcd  cluster_1.pcd  cluster_10.pcd  cluster_11.pcd  cluster_12.pcd  cluster_13.pcd  cluster_14.pcd  cluster_15.pcd  cluster_16.pcd  cluster_17.pcd  cluster_18.pcd  cluster_19.pcd  cluster_2.pcd  cluster_20.pcd  cluster_21.pcd  cluster_22.pcd  cluster_23.pcd  cluster_24.pcd  cluster_25.pcd  cluster_26.pcd  cluster_27.pcd  cluster_28.pcd  cluster_29.pcd  cluster_3.pcd  cluster_30.pcd  cluster_31.pcd  cluster_32.pcd  cluster_33.pcd  cluster_34.pcd  cluster_35.pcd  cluster_36.pcd  cluster_37.pcd  cluster_38.pcd  cluster_39.pcd  cluster_4.pcd  cluster_40.pcd  cluster_41.pcd  cluster_42.pcd  cluster_43.pcd  cluster_44.pcd  (+18 more)
pcd_files/cones/: full_0.pcd  full_1.pcd  full_2.pcd  full_3.pcd  full_4.pcd  full_5.pcd  full_6.pcd  partial_0.pcd  partial_1.pcd  partial_2.pcd  partial_3.pcd  partial_4.pcd  partial_5.pcd
pcd_files/other/: cluster_0.pcd  cluster_1.pcd  cluster_2.pcd  cluster_3.pcd  cluster_4.pcd  cluster_5.pcd  cluster_6.pcd  cluster_7.pcd  cluster_8.pcd
processed_frames/: frame_0.pcd  frame_100.pcd  frame_150.pcd  frame_200.pcd  frame_300.pcd  frame_50.pcd
processed_frames/frames1/: frame_250.pcd  frame_350.pcd  frame_400.pcd
processed_frames/frames2/: frame_1.pcd  frame_10.pcd  frame_11.pcd  frame_13.pcd  frame_14.pcd  frame_15.pcd  frame_16.pcd  frame_18.pcd  frame_19.pcd  frame_2.pcd  frame_3.pcd  frame_4.pcd  frame_5.pcd  frame_6.pcd  frame_8.pcd
processed_frames/frames3/: frame_0.pcd  frame_1.pcd  frame_10.pcd  frame_11.pcd  frame_12.pcd  frame_13.pcd  frame_14.pcd  frame_15.pcd  frame_16.pcd  frame_17.pcd  frame_18.pcd  frame_19.pcd  frame_2.pcd  frame_20.pcd  frame_21.pcd  frame_24.pcd  frame_29.pcd  frame_3.pcd  frame_38.pcd  frame_4.pcd  frame_40.pcd  frame_5.pcd  frame_6.pcd  frame_7.pcd  frame_8.pcd  frame_9.pcd
sample_frames/: frame_100.pcd  frame_150.pcd  frame_200.pcd  frame_350.pcd  frame_400.pcd
sample_frames/frames1/: frame_0.pcd  frame_250.pcd  frame_300.pcd  frame_50.pcd
sample_frames/frames2/: frame_0.pcd  frame_1.pcd  frame_10.pcd  frame_11.pcd  frame_12.pcd  frame_13.pcd  frame_14.pcd  frame_15.pcd  frame_16.pcd  frame_17.pcd  frame_18.pcd  frame_19.pcd  frame_2.pcd  frame_3.pcd  frame_4.pcd  frame_5.pcd  frame_6.pcd  frame_7.pcd  frame_8.pcd  frame_9.pcd
sample_frames/frames3/: frame_0.pcd  frame_1.pcd  frame_10.pcd  frame_11.pcd  frame_12.pcd  frame_13.pcd  frame_14.pcd  frame_15.pcd  frame_16.pcd  frame_17.pcd  frame_18.pcd  frame_19.pcd  frame_2.pcd  frame_20.pcd  frame_3.pcd  frame_4.pcd  frame_5.pcd  frame_6.pcd  frame_7.pcd  frame_8.pcd  frame_9.pcd
simulation_data/: numBins.csv  numSegments.csv  tB.csv  tDGround.csv  tDPrev.csv  tM.csv  tMSmall.csv  tRMSE.csv
simulation_data/default/: numBins.csv  numSegments.csv  tDGround.csv  tMSmall.csv  tRMSE.csv
simulation_data/sim1/: numBins.csv
simulation_data/sim2/: numSegments.csv  tM.csv
simulation_data/sim3/: numBins.csv  numSegments.csv  tB.csv  tMSmall.csv
simulation_data/sim4/: numBins.csv  numSegments.csv  tDGround.csv  tDPrev.csv
simulation_data/sim5/: tB.csv  tM.csv
simulation_data/sim6/: tB.csv  tDGround.csv  tM.csv  tMSmall.csv  tRMSE.csv
src/: edit_record.cpp  plot.py  point_categories.cpp  point_categories.hpp  point_categorization.cpp  point_categorization.hpp  point_categorization_main.cpp
src/algorithm_simulation_src/: algorithm_parameter.cpp  algorithm_parameter.hpp  algorithm_simulation_main.cpp  parameter_set.cpp  parameter_set.hpp  simulation_data.cpp  (+1 more)
(+464 files in other folders)
